Fixed image scaling to prevent layout breaking

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,6 +54,7 @@
   text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.22);
   font-size: 21px;
   text-transform: uppercase;
+  border: none;
   cursor: pointer;
 }
 
@@ -203,6 +204,9 @@ a {
     position: absolute;
     top: 93px;
     left: -83px;
+    width: 615px;
+    height: 350px;
+    object-fit: cover;
     z-index: 1;
   }
 
@@ -256,6 +260,10 @@ a {
     border-radius: 100%;
   }
 
+  .skills__img {
+    max-width: 60px;
+  }
+
   .skills__descr {
     margin-top: 18px;
     text-align: center;
@@ -297,6 +305,9 @@ a {
   .invite__img {
     display: block;
     margin: 0 auto;
+    object-fit: cover;
+    width: 500px;
+    height: 250px;
   }
   .invite__descr-big {
     margin-top: 40px;
